WindowRef will now have component instance if it is open with a component

--- a/projects/mona-ui/src/lib/window/components/window-content/window-content.component.html
+++ b/projects/mona-ui/src/lib/window/components/window-content/window-content.component.html
@@ -12,7 +12,7 @@
     </div>
     <div class="mona-window-content">
         <ng-container [ngTemplateOutlet]="$any(windowData.content)" *ngIf="contentType==='template'"></ng-container>
-        <ng-container [ngComponentOutlet]="$any(windowData.content)" *ngIf="contentType==='component'"></ng-container>
+        <ng-container #componentAnchor *ngIf="contentType==='component'"></ng-container>
     </div>
 
     <div monaWindowResizeHandler [minWidth]="windowData.minWidth" [minHeight]="windowData.minHeight"
