--- a/projects/mona-ui-tester/src/app/app.component.html
+++ b/projects/mona-ui-tester/src/app/app.component.html
@@ -391,7 +391,9 @@
                             </div>
 
                             <div>
-                                <mona-progress-bar [value]="sliderValue*10" style="width: 400px;"></mona-progress-bar>
+                                <mona-progress-bar [value]="sliderValue*10" [disabled]="false" [min]="0" [max]="100"
+                                                   [labelVisible]="true" [labelFormat]="progressLabelFormatter"
+                                                   labelPosition="end" style="width: 400px;"></mona-progress-bar>
                             </div>
 
                             <div style="display: flex; flex-direction: column; z-index: 100;">
