--- a/projects/mona-ui-tester/src/app/app.component.html
+++ b/projects/mona-ui-tester/src/app/app.component.html
@@ -392,6 +392,7 @@
 
                             <div>
                                 <mona-progress-bar [value]="sliderValue*10" [disabled]="false" [min]="0" [max]="100"
+                                                   [color]="progressBarColorSelector" [labelStyles]="{'font-weight': 'bolder'}"
                                                    [labelVisible]="true" [labelFormat]="progressLabelFormatter"
                                                    labelPosition="end" style="width: 400px;"></mona-progress-bar>
                             </div>
