--- a/projects/mona-ui/src/lib/progress-bars/modules/progress-bar/components/progress-bar/progress-bar.component.html
+++ b/projects/mona-ui/src/lib/progress-bars/modules/progress-bar/components/progress-bar/progress-bar.component.html
@@ -1,17 +1,17 @@
 <div class="mona-progress-bar" [ngClass]="{'mona-disabled': disabled}">
-    <div class="mona-progress-bar-track mona-progress-bar-track-prev"
+    <div class="mona-progress-bar-track mona-progress-bar-track-prev" [ngStyle]="{'background-color': progressColor}"
          [ngClass]="{'mona-progress-left': labelPosition==='start', 'mona-progress-right': labelPosition==='end', 'mona-progress-bar-label-hidden': !labelVisible}">
         <ng-container *ngIf="labelVisible">
-            <span class="mona-progress-bar-label" *ngIf="!labelFormat">{{progress | number:'1.0-2'}}%</span>
-            <span class="mona-progress-bar-label" *ngIf="labelFormat">{{label}}</span>
+            <span class="mona-progress-bar-label" [ngStyle]="labelStyles" *ngIf="!labelFormat">{{progress | number:'1.0-2'}}%</span>
+            <span class="mona-progress-bar-label" [ngStyle]="labelStyles" *ngIf="labelFormat">{{label}}</span>
         </ng-container>
     </div>
     <div class="mona-progress-bar-track mona-progress-bar-track-next"
          [ngClass]="{'mona-progress-left': labelPosition==='start', 'mona-progress-right': labelPosition==='end', 'mona-progress-bar-label-hidden': !labelVisible}"
          [ngStyle]="{'clip-path': 'inset(-1px '+rightClip+'px -1px '+progress+'%)'}">
         <ng-container *ngIf="labelVisible">
-            <span class="mona-progress-bar-label" *ngIf="!labelFormat">{{progress | number:'1.0-2'}}%</span>
-            <span class="mona-progress-bar-label" *ngIf="labelFormat">{{label}}</span>
+            <span class="mona-progress-bar-label" [ngStyle]="labelStyles" *ngIf="!labelFormat">{{progress | number:'1.0-2'}}%</span>
+            <span class="mona-progress-bar-label" [ngStyle]="labelStyles" *ngIf="labelFormat">{{label}}</span>
         </ng-container>
     </div>
 </div>
