--- a/projects/mona-ui-tester/src/app/app.component.html
+++ b/projects/mona-ui-tester/src/app/app.component.html
@@ -390,11 +390,20 @@
 
                             </div>
 
-                            <div>
+                            <div style="align-items: center;">
                                 <mona-progress-bar [value]="sliderValue*10" [disabled]="false" [min]="0" [max]="100"
                                                    [color]="progressBarColorSelector" [labelStyles]="{'font-weight': 'bolder'}"
                                                    [labelVisible]="true" [labelFormat]="progressLabelFormatter"
                                                    labelPosition="end" style="width: 400px;"></mona-progress-bar>
+
+                                <mona-circular-progress-bar [value]="sliderValue*10" [color]="progressBarColorSelector" [thickness]="4">
+                                    <ng-template monaCircularProgressBarLabelTemplate let-progress>
+                                        <span *ngIf="progress !== 100" [ngStyle]="{'color': progressBarColorSelector(progress)}">{{progress}}%</span>
+                                        <span *ngIf="progress === 100" [ngStyle]="{'color': progressBarColorSelector(progress)}">
+                                            Done!
+                                        </span>
+                                    </ng-template>
+                                </mona-circular-progress-bar>
                             </div>
 
                             <div style="display: flex; flex-direction: column; z-index: 100;">
