--- a/projects/mona-ui/src/lib/progress-bars/modules/circular-progress-bar/components/circular-progress-bar/circular-progress-bar.component.scss
+++ b/projects/mona-ui/src/lib/progress-bars/modules/circular-progress-bar/components/circular-progress-bar/circular-progress-bar.component.scss
@@ -19,3 +19,19 @@ circle {
     transform: rotate(-90deg);
     transition: stroke-dashoffset 0.35s linear, stroke 0.35s linear;
 }
+
+.mona-circular-progress-bar-indeterminate {
+    animation: rotate 2s linear infinite;
+}
+
+@keyframes rotate {
+    0% {
+        transform: rotate(0deg);
+    }
+    50% {
+        transform: rotate(180deg);
+    }
+    100% {
+        transform: rotate(360deg);
+    }
+}
