--- a/projects/mona-ui/styles/theme.scss
+++ b/projects/mona-ui/styles/theme.scss
@@ -866,6 +866,9 @@ div.mona-progress-bar-track {
         color: var(--mona-text);
         user-select: none;
     }
+    &.mona-disabled {
+        @include disabled;
+    }
 }
 
 /** Tooltip */
