Fix incorrect dropdown value bindings. (Read more)
For two-way bindings, value should be updated via valueChange event.
With two-way binding, aka "[()]" this is handled automatically.
With [value] and (valueChange), value should be updated inside valueChange callback.
DO NOT update value inside component itself. Use a different variable to keep track of internal changes if necessary.

--- a/projects/mona-ui/src/lib/dropdowns/modules/multi-select/components/multi-select/multi-select.component.html
+++ b/projects/mona-ui/src/lib/dropdowns/modules/multi-select/components/multi-select/multi-select.component.html
@@ -24,7 +24,7 @@
 <ng-template #popupTemplate>
     <div *ngIf="!!popupRef">
         <mona-popup-list [textField]="textField" [valueField]="valueField" [groupField]="groupField" [filterable]="filterable"
-                         [value]="value" selectionMode="multiple" (valueChange)="onPopupListValueChange($event)">
+                         [value]="popupListValues" selectionMode="multiple" (valueChange)="onPopupListValueChange($event)">
             <ng-container *ngIf="itemTemplate">
                 <ng-template monaListItemTemplate let-dataItem let-listItem="listItem">
                     <ng-container [ngTemplateOutlet]="itemTemplate ?? null"
