--- a/projects/mona-ui-tester/src/app/app.component.html
+++ b/projects/mona-ui-tester/src/app/app.component.html
@@ -106,31 +106,10 @@
                                     </mona-tooltip>
                                 </button>
 
-                                <button monaButton (click)="openWindow(windowContentTemplate, windowTitleTemplate)">Show Window</button>
+                                <button monaButton (click)="openWindow(windowTitleTemplate)">Show Window</button>
 
                                 <ng-template #windowTitleTemplate>
                                     <span style="color: crimson; font-weight: bolder;">Templated Window Title</span>
-                                </ng-template>
-                                <ng-template #windowContentTemplate>
-                                    <div style="display: flex; align-items: center; justify-content: center;">
-                                        <mona-combo-box [data]="dropdownListDataItems" textField="text" valueField="value"
-                                            groupField="group" [filterable]="false"
-                                            style="width: 200px; margin-right: 20px;" [disabled]="false"
-                                            [showClearButton]="true" [allowCustomValue]="true"
-                                            [valueNormalizer]="comboBoxValueNormalizer$"
-                                            [value]="dropdownListDataItems[3]" [itemDisabler]="dropdownItemDisabler"
-                                            (valueChange)="onComboBoxValueChange($event)">
-                                            <ng-template monaComboBoxGroupTemplate let-group>
-                                                <span style="color: crimson; font-weight: bold;">{{group}}</span>
-                                            </ng-template>
-                                        </mona-combo-box>
-
-                                        <mona-switch [labelOff]="'12'" labelOn="24" [(ngModel)]="dateFormat24Hours"></mona-switch>
-
-                                        <mona-date-time-picker format="dd/MM/yyyy hh:mm a" style="width: 250px; margin-right: 20px;"
-                                                               [hourFormat]="dateFormat24Hours ? '24' : '12'" [readonly]="false" [value]="dateTimePickerValue"
-                                                               (valueChange)="onDateTimePickerValueChange($event)"></mona-date-time-picker>
-                                    </div>
                                 </ng-template>
                             </div>
 
@@ -279,7 +258,7 @@
                                                 style="width: 200px; margin-right: 20px;" [disabled]="false"
                                                 [showClearButton]="true" [allowCustomValue]="true"
                                                 [valueNormalizer]="comboBoxValueNormalizer$"
-                                                [value]="dropdownListDataItems[3]" [itemDisabler]="dropdownItemDisabler"
+                                                [value]="selectedComboBoxDataItem" [itemDisabler]="dropdownItemDisabler"
                                                 (valueChange)="onComboBoxValueChange($event)">
                                     <ng-template monaComboBoxGroupTemplate let-group>
                                         <span style="color: crimson; font-weight: bold;">{{group}}</span>
@@ -290,8 +269,8 @@
                                                 [showClearButton]="true"
                                                 [filterable]="true" [itemDisabler]="dropdownPrimitiveItemDisabler"
                                                 style="width: 200px; margin-right: 20px;"
-                                                [value]="selectedPrimitiveComboBoxDataItem"
-                                                (valueChange)="onComboBoxValueChange($event)">
+                                                [(value)]="selectedPrimitiveComboBoxDataItem"
+                                                >
                                     <ng-template monaComboBoxItemTemplate let-dataItem>
                                         <span style="color: darkorange; font-weight: 600;">{{dataItem}}</span>
                                     </ng-template>
