--- a/projects/mona-ui/styles/theme.scss
+++ b/projects/mona-ui/styles/theme.scss
@@ -834,6 +834,9 @@ ul.mona-menubar {
 
 /** Pager */
 .mona-pager {
+    background: var(--mona-background);
+    border: 1px solid var(--mona-border-color);
+    color: var(--mona-text);
     & li.mona-pager-active {
         & button {
             background-color: var(--mona-primary);
@@ -841,6 +844,10 @@ ul.mona-menubar {
                 background-color: var(--mona-primary);
             }
         }
+    }
+    & mona-numeric-text-box input {
+        text-align: center;
+        background: var(--mona-background-light);
     }
 }
 
