--- a/projects/mona-ui/src/lib/pager/components/pager/pager.component.html
+++ b/projects/mona-ui/src/lib/pager/components/pager/pager.component.html
@@ -1,35 +1,95 @@
 <div class="mona-pager">
-    <ol class="mona-pager-list">
-        <li>
-            <button monaButton [flat]="true" [disabled]="page<=1" (click)="onPreviousPageClick()">
-                <fa-icon [icon]="previousIcon"></fa-icon>
-            </button>
-        </li>
-        <li *ngIf="pages.length !== 0" [ngClass]="{'mona-pager-active': page===1}">
-            <button monaButton [flat]="true" (click)="onPageClick(1)">1</button>
-        </li>
-        <li *ngIf="pages.length > visiblePages && pages[1].page - 1 > 1">
-            <button monaButton [flat]="true" (click)="onJumpPreviousClick()">
-                <fa-icon [icon]="ellipsisIcon"></fa-icon>
-            </button>
-        </li>
-        <ng-container *ngFor="let pageItem of pages|monaSlice:1:pages.length-1; let px = index;">
-            <li [attr.data-page]="pageItem.page" [ngClass]="{'mona-pager-active': page===pageItem.page}">
-                <button monaButton [flat]="true" (click)="onPageClick(pageItem.page)">{{pageItem.text}}</button>
+    <ng-container *ngIf="type==='numeric'">
+        <ol class="mona-pager-list">
+            <li *ngIf="firstLast">
+                <button monaButton [flat]="true" (click)="onPageClick(1)" [disabled]="page===1">
+                    <fa-icon [icon]="firstPageIcon"></fa-icon>
+                </button>
             </li>
-        </ng-container>
-        <li *ngIf="pages.length > visiblePages && pages[pages.length-1].page - pages[pages.length-2].page > 1">
-            <button monaButton [flat]="true" (click)="onJumpNextClick()">
-                <fa-icon [icon]="ellipsisIcon"></fa-icon>
-            </button>
-        </li>
-        <li *ngIf="pages.length > 1" [ngClass]="{'mona-pager-active': page===max}">
-            <button monaButton [flat]="true" (click)="onPageClick(max)">{{max}}</button>
-        </li>
-        <li>
-            <button monaButton [flat]="true" [disabled]="page < 1 || page === max" (click)="onNextPageClick()">
-                <fa-icon [icon]="nextIcon"></fa-icon>
-            </button>
-        </li>
-    </ol>
+            <li *ngIf="previousNext">
+                <button monaButton [flat]="true" [disabled]="page<=1" (click)="onPreviousPageClick()">
+                    <fa-icon [icon]="previousIcon"></fa-icon>
+                </button>
+            </li>
+            <li *ngIf="pages.length !== 0" [ngClass]="{'mona-pager-active': page===1}">
+                <button monaButton [flat]="true" (click)="onPageClick(1)">1</button>
+            </li>
+            <li *ngIf="pages.length > visiblePages && pages[1].page - 1 > 1">
+                <button monaButton [flat]="true" (click)="onJumpPreviousClick()">
+                    <fa-icon [icon]="ellipsisIcon"></fa-icon>
+                </button>
+            </li>
+            <ng-container *ngFor="let pageItem of pages|monaSlice:1:pages.length-1; let px = index;">
+                <li [attr.data-page]="pageItem.page" [ngClass]="{'mona-pager-active': page===pageItem.page}">
+                    <button monaButton [flat]="true" (click)="onPageClick(pageItem.page)">{{pageItem.text}}</button>
+                </li>
+            </ng-container>
+            <li *ngIf="pages.length > visiblePages && pages[pages.length-1].page - pages[pages.length-2].page > 1">
+                <button monaButton [flat]="true" (click)="onJumpNextClick()">
+                    <fa-icon [icon]="ellipsisIcon"></fa-icon>
+                </button>
+            </li>
+            <li *ngIf="pages.length > 1" [ngClass]="{'mona-pager-active': page===pageCount}">
+                <button monaButton [flat]="true" (click)="onPageClick(pageCount)">{{pageCount}}</button>
+            </li>
+            <li *ngIf="previousNext">
+                <button monaButton [flat]="true" [disabled]="page < 1 || page === pageCount" (click)="onNextPageClick()">
+                    <fa-icon [icon]="nextIcon"></fa-icon>
+                </button>
+            </li>
+            <li *ngIf="firstLast">
+                <button monaButton [flat]="true" (click)="onPageClick(pageCount)" [disabled]="page===pageCount">
+                    <fa-icon [icon]="lastPageIcon"></fa-icon>
+                </button>
+            </li>
+            <li>
+                <mona-numeric-text-box [spinners]="false" [min]="1" [max]="pageCount" [(value)]="inputValue"
+                                       (inputBlur)="onPageInputBlur()" *ngIf="pageInput"></mona-numeric-text-box>
+            </li>
+            <li>
+                <mona-drop-down-list [data]="pageSizeValueList" [value]="pageSize"
+                                     (valueChange)="onPageSizeValueChange($event)" *ngIf="pageSizeValueList.length !== 0"></mona-drop-down-list>
+                <span>items per page</span>
+            </li>
+        </ol>
+        <div class="mona-pager-info">
+            <span>{{(page-1)*pageSize+1}} - {{page*pageSize > total ? total : page*pageSize}} of {{total}} items</span>
+        </div>
+    </ng-container>
+    <ng-container *ngIf="type==='input'">
+        <div class="mona-pager-input">
+            <ol class="mona-pager-list">
+                <li *ngIf="firstLast">
+                    <button monaButton [flat]="true" (click)="onPageClick(1)" [disabled]="page===1">
+                        <fa-icon [icon]="firstPageIcon"></fa-icon>
+                    </button>
+                </li>
+                <li *ngIf="previousNext">
+                    <button monaButton [flat]="true" [disabled]="page<=1" (click)="onPreviousPageClick()">
+                        <fa-icon [icon]="previousIcon"></fa-icon>
+                    </button>
+                </li>
+               <li>
+                   <span class="mona-pager-input-text">Page</span>
+                   <mona-numeric-text-box [spinners]="false" [min]="1" [max]="pageCount" [(value)]="inputValue"
+                                          (inputBlur)="onPageInputBlur()"></mona-numeric-text-box>
+                   <span class="mona-pager-input-text">of</span>
+                   <span class="mona-pager-input-text">{{pageCount}}</span>
+               </li>
+                <li *ngIf="previousNext">
+                    <button monaButton [flat]="true" [disabled]="page < 1 || page === pageCount" (click)="onNextPageClick()">
+                        <fa-icon [icon]="nextIcon"></fa-icon>
+                    </button>
+                </li>
+                <li *ngIf="firstLast">
+                    <button monaButton [flat]="true" (click)="onPageClick(pageCount)" [disabled]="page===pageCount">
+                        <fa-icon [icon]="lastPageIcon"></fa-icon>
+                    </button>
+                </li>
+            </ol>
+        </div>
+        <div class="mona-pager-info">
+            <span>{{(page-1)*pageSize+1}} - {{page*pageSize > total ? total : page*pageSize}} of {{total}} items</span>
+        </div>
+    </ng-container>
 </div>
