--- a/projects/mona-ui/src/lib/inputs/modules/color-picker/components/color-picker/color-picker.component.html
+++ b/projects/mona-ui/src/lib/inputs/modules/color-picker/components/color-picker/color-picker.component.html
@@ -9,7 +9,7 @@
 
 <mona-popup [anchor]="colorPickerAnchor" popupClass="mona-color-picker-popup" width="auto">
     <ng-template>
-        <mona-color-palette [palette]="palette" [columns]="8" [value]="value"
+        <mona-color-palette [palette]="palette" [columns]="8" [value]="color"
                             (valueChange)="onColorPaletteValueChange($event)"></mona-color-palette>
     </ng-template>
 </mona-popup>
