--- a/projects/mona-ui/src/lib/filter/components/filter-menu/filter-menu.component.html
+++ b/projects/mona-ui/src/lib/filter/components/filter-menu/filter-menu.component.html
@@ -11,11 +11,27 @@
                                  (valueChange)="onFilterOperatorChange(0, $event)"></mona-drop-down-list>
             <mona-numeric-text-box [(ngModel)]="numberFilterValues[0]"></mona-numeric-text-box>
         </ng-container>
+
+        <ng-container *ngIf="type==='date'">
+            <mona-drop-down-list [data]="dateFilterMenuDataItems" textField="text" valueField="value" [value]="selectedFilterMenuDataItemList[0]"
+                                 (valueChange)="onFilterOperatorChange(0, $event)"></mona-drop-down-list>
+            <mona-date-picker [(value)]="dateFilterValues[0]" [format]="dateOptions.format" *ngIf="dateOptions.type==='date'"></mona-date-picker>
+            <mona-date-time-picker [(value)]="dateFilterValues[0]" [format]="dateOptions.format" *ngIf="dateOptions.type==='datetime'"></mona-date-time-picker>
+            <mona-time-picker [(value)]="dateFilterValues[0]" [format]="dateOptions.format" *ngIf="dateOptions.type==='time'"></mona-time-picker>
+        </ng-container>
+
+        <ng-container *ngIf="type==='boolean'">
+            <mona-drop-down-list [data]="booleanFilterMenuDataItems" textField="text" valueField="value" [value]="selectedFilterMenuDataItemList[0]"
+                                 (valueChange)="onFilterOperatorChange(0, $event)"></mona-drop-down-list>
+        </ng-container>
+
     </div>
-    <div class="mona-filter-menu-item">
-        <mona-drop-down-list [data]="connectorDataItems" textField="text" valueField="value" [value]="selectedConnectorItem" (valueChange)="onConnectorChange($event)"></mona-drop-down-list>
+    <div class="mona-filter-menu-item" *ngIf="firstFilterValid">
+        <mona-button-group selection="single" [disabled]="!firstFilterValid">
+            <button monaButton [selected]="item.value === selectedConnectorItem?.value" (click)="onConnectorChange(item)" *ngFor="let item of connectorDataItems">{{item.text}}</button>
+        </mona-button-group>
     </div>
-    <div class="mona-filter-menu-item">
+    <div class="mona-filter-menu-item" *ngIf="!!selectedConnectorItem">
         <ng-container *ngIf="type==='string'">
             <mona-drop-down-list [data]="stringFilterMenuDataItems" textField="text" valueField="value" [value]="selectedFilterMenuDataItemList[1]"
                                  (valueChange)="onFilterOperatorChange(1, $event)"></mona-drop-down-list>
@@ -27,6 +43,20 @@
                                  (valueChange)="onFilterOperatorChange(1, $event)"></mona-drop-down-list>
             <mona-numeric-text-box [(ngModel)]="numberFilterValues[1]"></mona-numeric-text-box>
         </ng-container>
+
+        <ng-container *ngIf="type==='date'">
+            <mona-drop-down-list [data]="dateFilterMenuDataItems" textField="text" valueField="value" [value]="selectedFilterMenuDataItemList[1]"
+                                 (valueChange)="onFilterOperatorChange(1, $event)"></mona-drop-down-list>
+            <mona-date-picker [(value)]="dateFilterValues[1]" [format]="dateOptions.format" *ngIf="dateOptions.type==='date'"></mona-date-picker>
+            <mona-date-time-picker [(value)]="dateFilterValues[1]" [format]="dateOptions.format" *ngIf="dateOptions.type==='datetime'"></mona-date-time-picker>
+            <mona-time-picker [(value)]="dateFilterValues[1]" [format]="dateOptions.format" *ngIf="dateOptions.type==='time'"></mona-time-picker>
+        </ng-container>
+
+        <ng-container *ngIf="type==='boolean'">
+            <mona-drop-down-list [data]="booleanFilterMenuDataItems" textField="text" valueField="value" [value]="selectedFilterMenuDataItemList[1]"
+                                 (valueChange)="onFilterOperatorChange(1, $event)"></mona-drop-down-list>
+        </ng-container>
+
     </div>
     <div class="mona-filter-menu-item mona-filter-menu-actions">
         <button monaButton (click)="onFilterApply()" [disabled]="applyDisabled">Apply</button>
