Support SortDescriptor array

--- a/projects/mona-ui-tester/src/app/app.component.html
+++ b/projects/mona-ui-tester/src/app/app.component.html
@@ -95,7 +95,7 @@
                             <div style="color: #95c5cb;">{{selectedDropdownListDataItem | json}}</div>
 
                             <div>
-                                <mona-filter-menu type="number" field="value" (apply)="onFilterMenuFilterApply($event)"></mona-filter-menu>
+                                <mona-filter-menu type="string" field="text" (apply)="onFilterMenuFilterApply($event)"></mona-filter-menu>
                             </div>
 
                             <div>
